# fontdue

./: .gitignore  Cargo.toml
src/: font.rs  hash.rs  lib.rs
src/platform/: mod.rs  simd_x86.rs
src/table/: kern.rs
